app/src/main/kotlin/com/example/dmitry/grades/ui/base/ui/errors/StubErrorView.kt
package com.example.dmitry.grades.ui.base.ui.errors

interface StubErrorView : ErrorView {

    fun showStub()
    fun hideStub()
}